--- a/src/App/Views/CreateTaskView.htm
+++ b/src/App/Views/CreateTaskView.htm
@@ -9,11 +9,30 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+
+            $('form').on('submit', function (e) {
+                e.preventDefault();
+                let formData = $('form').serialize()
+                $.ajax({
+                    type: 'POST',
+                    url: '../Controllers/TaskController.php',
+                    data: formData,
+                    success: function () {
+                        alert('form was submitted');
+                    }
+                });
+
+            });
+
+        });
+    </script>
 </head>
 
 <body>
     <div class="row justify-content-center">
-        <form action="./CreateTaskView.php" method="POST">
+        <form>
             <div class="form-group">
                 <label>Task title:</label>
                 <input type="text" class="form-control" name="name" value="" placeholder="Enter the task name">
@@ -48,20 +67,5 @@
         </form>
     </div>
 </body>
-<script>
-    $.ajax({
-        type: "POST",
-        data: {
-            action:'create',
-            data: 
-        },
-        url: "animalHandler.php",
-        dataType: "html",
-        async: false,
-        success: function (data) {
-            result = data;
-        }
-    }); 
-</script>
 
 </html>
