--- a/src/App/Views/CreateTaskView.htm
+++ b/src/App/Views/CreateTaskView.htm
@@ -29,7 +29,8 @@
                         body: JSON.stringify(data)
                     },
                     success: function (result) {
-                        alert(result);
+                        result = JSON.parse(result);
+                        alert(result.message);
                         window.location.href = "../../../index.php";
                     }
                 });
