Mudanca de estilo no index.

--- a/src/App/Views/index.htm
+++ b/src/App/Views/index.htm
@@ -234,7 +234,7 @@
             <hr class="my-4">
 
             <p class="lead">
-                <button id="showCreateModal" class="btn btn-success">New Task</button>
+                <button id="showCreateModal" class="btn btn-success"><i class="fa fa-plus"></i> New Task</button>
             </p>
         </div>
     </div>
